@@ -1,4 +1,3 @@
-Drop deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors for 1.21
 Remove FunctionalChaosAlgorithm(Function) ctors for 1.21
 Remove MetaModelResult(Function, Function, ...) ctor
 Remove FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
