@@ -80,18 +80,6 @@ LinearModelStepwiseAlgorithm::LinearModelStepwiseAlgorithm(const Sample & inputS
     throw InvalidArgumentException(HERE) << "Can only specify startIndices in BOTH mode";
 }
 
-/** Oldest constructor (for compatibility) */
-LinearModelStepwiseAlgorithm::LinearModelStepwiseAlgorithm(const Sample &inputSample,
-    const Basis &basis,
-    const Sample &outputSample,
-    const Indices &minimalIndices,
-    const Direction direction,
-    const Indices &startIndices)
-  : LinearModelStepwiseAlgorithm(inputSample, outputSample, basis, minimalIndices, direction, startIndices)
-{
-  LOGWARN(OSS() << "LinearModelStepwiseAlgorithm(inputSample, basis, outputSample, minimalIndices, direction, startIndices) is deprecated");
-}
-
 /* Virtual constructor */
 LinearModelStepwiseAlgorithm * LinearModelStepwiseAlgorithm::clone() const
 {
